Refactor/general (#20)
* EntityDtoConverter

* Patient Dto to Entity and vice versa

* ModelMapper

* Converters, refactoring

* Tested

* Minor data changes

* Added blood bank edit by medical staff

* Update blood bank refactor

* Medical staff converter

* Minor fixes due to refactoring

Fixed updating profile and updating password.
Tested updating and bb page sort-filter-find.
All seems ok now

* Fixed medical staff controller bugs

Co-authored-by: isidorapoznanovic <isidorapoznanovic1@gmail.com>
Co-authored-by: MMG-lmg <37846236+MMG-lmg@users.noreply.github.com>