@@ -9,12 +9,12 @@ import com.example.isa.model.BloodBank;
 import com.example.isa.model.Gender;
 import com.example.isa.model.MedicalStaff;
 import com.example.isa.service.interfaces.BloodBankService;
+import com.example.isa.util.Converters.BloodBankConverter;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -27,32 +27,30 @@ import java.util.stream.Collectors;
 public class BloodBankController {
 
     private final BloodBankService service;
+    private final BloodBankConverter bloodBankConverter;
 
     @Autowired
-    public BloodBankController(BloodBankService service) {
+    public BloodBankController(BloodBankService service, BloodBankConverter bloodBankConverter) {
         this.service = service;
+        this.bloodBankConverter = bloodBankConverter;
     }
 
     @GetMapping
     @ApiOperation(value = "Get all blood banks.", httpMethod = "GET")
-    public ResponseEntity<BloodBankListDto> getAll() {
+    public ResponseEntity<List<BloodBankDto>> getAll() {
         List<BloodBank> bloodBankList = service.getAll();
-        return ResponseEntity.ok(convertListToDto(bloodBankList));
+        List<BloodBankDto> bloodBankDtoList = bloodBankList.stream().map(bloodBankConverter::entityToDto).collect(Collectors.toList());
+        return ResponseEntity.ok(bloodBankDtoList);
     }
 
     @PostMapping(value = "/search")
     @ApiOperation(value = "Search, filter and sort blood banks.", httpMethod = "POST")
-    public ResponseEntity<BloodBankListDto> search(@RequestBody BloodBankSearchSortDto request) {
+    public ResponseEntity<List<BloodBankDto>> search(@RequestBody BloodBankSearchSortDto request) {
         //Search and filter to be implemented later on.
         Sort sort = Sort.by(Sort.Direction.fromString(request.getSortCriteria().getDirection()), request.getSortCriteria().getProperty());
         List<BloodBank> searchedData = service.search(sort, request.getSearchCriteria(), request.getFilterGrade());
-        return ResponseEntity.ok(convertListToDto(searchedData));
-    }
-
-    private BloodBankListDto convertListToDto(List<BloodBank> bloodBankList) {
-        List<BloodBankDto> bloodBankDtoList = bloodBankList.stream().map(bank -> new BloodBankDto(bank.getTitle(), bank.getAddress().getStreet(), bank.getAddress().getCity(), bank.getAddress().getCountry(), bank.getWorkingHours().getIntervalStart().toString(), bank.getWorkingHours().getIntervalEnd().toString(), bank.getDescription(), bank.getAverageGrade())).collect(Collectors.toList());
-        BloodBankListDto dto = new BloodBankListDto(bloodBankDtoList);
-        return dto;
+        List<BloodBankDto> dtos = searchedData.stream().map(bloodBankConverter::entityToDto).toList();
+        return ResponseEntity.ok(dtos);
     }
 
     @PostMapping(value = "/update")
